# automation

./: CHANGELOG.md  Cargo.toml  README.md  justfile
examples/: actix-web-example.rs  auto.http
src/: enums.rs  executor.rs  keyboard.rs  keymap.rs  lib.rs  mouse.rs  simulator.rs
