[package]
name = "automation"
version = "0.1.0"
edition = "2024"

homepage = "https://github.com/Liangdi/automation"
repository = "https://github.com/Liangdi/automation"

authors = ["Liangdi <wu@liangdi.me>"]

description = "Automation for Rust"
keywords = ["automation", "rust"]

license = "MIT"

[dependencies]
enigo = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
